--- a/UILayer/Views/Admin/_Layout.cshtml
+++ b/UILayer/Views/Admin/_Layout.cshtml
@@ -1,18 +1,18 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - UILayer</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
+     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Mobizone</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -31,11 +31,12 @@
                        
                             @if (User.Identity.IsAuthenticated)
                             {
-                                 <li class="nav-item">
-                                <a class="btn btn-primary" style="margin-left: 0px;padding-top: 5px; padding-bottom: 6px;" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
-                                </li>
+                               
                                  <li class="nav-item">
                                 <a class="nav-link text-dark" style="margin-left: 17px;padding-top: 5px ; asp-controller="User" asp-action="account">@User.Identity.Name </a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="btn btn-primary" style="margin-left: 0px;padding-top: 5px; padding-bottom: 6px;" asp-area="" asp-controller="admin" asp-action="Logout">Logout</a>
                                 </li>
                             }
                             else
@@ -54,21 +55,8 @@
                 </div>
             </div>
         </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+    <div>
+        @RenderBody()
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - UILayer - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
