--- a/UILayer/Views/User/Login.cshtml
+++ b/UILayer/Views/User/Login.cshtml
@@ -5,6 +5,8 @@
 @{
     @*var loginUrl = ViewData["LoginUrl"] as string;*@
     var error = TempData["error"] as string;
+    Microsoft.Extensions.Primitives.StringValues queryVal = "";
+    var returnUrl = ViewData["LoginUrl"] as string;
 }
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -14,8 +16,17 @@
 <div class="container" style="margin-top: 10%; margin-top:100px;">
     <div class="row">
         <div class="col-md-4 col-md-offset-4 alert alert-info">
-            <h3 class="text-center">Login</h3>
-            <form id="LoginForm" method="post" asp-action="login">
+
+            @if (Context.Request.Query.TryGetValue("ReturnUrl", out queryVal) && queryVal.FirstOrDefault() == "/admin")
+            {
+                <h3 class="text-center">Admin Login</h3>
+            }
+            else
+            {
+                <h3 class="text-center">Login</h3>
+            }
+            
+            <form id="LoginForm" method="post" action="/user/login?ReturnUrl=@System.Net.WebUtility.UrlEncode(returnUrl)">
 
                 <div class="form-group">
                     <div class="input-group">
@@ -35,10 +46,18 @@
                     <button class="btn btn-info form-control" style="background-color: #0a8199" type="submit"><i class="glyphicon glyphicon-log-in"></i> Login </button>
                 </div>
             </form>
-            <div class="form-group">
+            @if (Context.Request.Query.TryGetValue("ReturnUrl", out queryVal) && queryVal.FirstOrDefault() == "/admin")
+            {
+                
+            }
+            else
+            {
+                <div class="form-group">
                 <a style="float:left">Forget Password?</a>
                 <a style="float:right;cursor:pointer;color:unset;" onclick="SignUp()" asp-action="UserRegister"> Sign Up </a>
             </div>
+            }
+            
 
         </div>
         <div class="form-group">
